@@ -264,6 +264,7 @@
         <version>3.11.0</version>
         <configuration>
           <release>21</release>
+          <compilerArgs>--enable-preview</compilerArgs>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
